Bug 962243 - Implement PINCH to TOUCHING transition in APZC. r=botond

--HG--
extra : commitid : FoHvf2KH9rd